arm/azure-nsg-with-databricks-rules.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "nsgName": {
      "defaultValue": "databricks-nsg",
      "type": "string",
      "metadata": {
        "description": "The name of the network security group to create."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "nsgDatabricksSecurityRules": {
      "defaultValue": [
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
          "properties": {
            "description": "Required for worker nodes communication within a cluster.",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 100,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
          "properties": {
            "description": "Required for Databricks control plane management of worker nodes.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "22",
            "sourceAddressPrefix": "AzureDatabricks",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 101,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
          "properties": {
            "description": "Required for Databricks control plane communication with worker nodes.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "5557",
            "sourceAddressPrefix": "AzureDatabricks",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 102,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
          "properties": {
            "description": "Required for workers communication with Databricks Webapp.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "443",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "AzureDatabricks",
            "access": "Allow",
            "priority": 100,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
          "properties": {
            "description": "Required for workers communication with Azure SQL services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "3306",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "Sql",
            "access": "Allow",
            "priority": 101,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
          "properties": {
            "description": "Required for workers communication with Azure Storage services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "443",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "Storage",
            "access": "Allow",
            "priority": 102,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
          "properties": {
            "description": "Required for worker nodes communication within a cluster.",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 103,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
          "properties": {
            "description": "Required for worker communication with Azure Eventhub services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "9093",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "EventHub",
            "access": "Allow",
            "priority": 104,
            "direction": "Outbound"
          }
        }
      ],
      "type": "array",
      "metadata": {
        "description": "The NSG rules required by Databricks."
      }
    },
    "nsgCustomSecurityRules": {
      "defaultValue": [
        {
          "name": "Test.Rule_1111",
          "properties": {
            "description": "Allow 1111",
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "1111",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "*",
            "access": "Allow",
            "priority": 1111,
            "direction": "Inbound"
          }
        }
      ],
      "type": "array",
      "metadata": {
        "description": "Custom NSG rules that would be added in addition to the required Databricks rules."
      }
    }
  },
  "variables": {
    "nsgSecurityRules": "[union(parameters('nsgDatabricksSecurityRules'), parameters('nsgCustomSecurityRules'))]"
  },
  "resources": [
    {
      "name": "[parameters('nsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-06-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": "[variables('nsgSecurityRules')]"
      }
    }
  ],
  "outputs": {
    "nsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
    }
  }
}
