arm/databricks-vnet-for-vnet-injection-with-public-ips.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "defaultValue": "databricks-vnet",
      "type": "string",
      "metadata": {
        "description": "The name of the virtual network to create."
      }
    },
    "privateSubnetName": {
      "defaultValue": "private-subnet",
      "type": "string",
      "metadata": {
        "description": "The name of the private subnet to create."
      }
    },
    "publicSubnetName": {
      "defaultValue": "public-subnet",
      "type": "string",
      "metadata": {
        "description": "The name of the public subnet to create."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "vnetCidr": {
      "defaultValue": "10.179.0.0/16",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the vnet."
      }
    },
    "privateSubnetCidr": {
      "defaultValue": "10.179.0.0/18",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the private subnet."
      }
    },
    "publicSubnetCidr": {
      "defaultValue": "10.179.64.0/18",
      "type": "string",
      "metadata": {
        "description": "Cidr range for the public subnet.."
      }
    },
    "nsgName": {
      "defaultValue": "databricks-nsg",
      "type": "string",
      "metadata": {
        "description": "The name of the network security group to create."
      }
    },
    "nsgDatabricksSecurityRules": {
      "defaultValue": [
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
          "properties": {
            "description": "Required for worker nodes communication within a cluster.",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 100,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
          "properties": {
            "description": "Required for Databricks control plane management of worker nodes.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "22",
            "sourceAddressPrefix": "AzureDatabricks",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 101,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
          "properties": {
            "description": "Required for Databricks control plane communication with worker nodes.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "5557",
            "sourceAddressPrefix": "AzureDatabricks",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 102,
            "direction": "Inbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
          "properties": {
            "description": "Required for workers communication with Databricks Webapp.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "443",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "AzureDatabricks",
            "access": "Allow",
            "priority": 100,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
          "properties": {
            "description": "Required for workers communication with Azure SQL services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "3306",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "Sql",
            "access": "Allow",
            "priority": 101,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
          "properties": {
            "description": "Required for workers communication with Azure Storage services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "443",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "Storage",
            "access": "Allow",
            "priority": 102,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
          "properties": {
            "description": "Required for worker nodes communication within a cluster.",
            "protocol": "*",
            "sourcePortRange": "*",
            "destinationPortRange": "*",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "VirtualNetwork",
            "access": "Allow",
            "priority": 103,
            "direction": "Outbound"
          }
        },
        {
          "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
          "properties": {
            "description": "Required for worker communication with Azure Eventhub services.",
            "protocol": "tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "9093",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "EventHub",
            "access": "Allow",
            "priority": 104,
            "direction": "Outbound"
          }
        }
      ],
      "type": "array",
      "metadata": {
        "description": "The NSG rules required by Databricks."
      }
    },
    "nsgCustomSecurityRules": {
      "defaultValue": [
        {
          "name": "Test.Rule_1234",
          "properties": {
            "description": "Allow 1234",
            "protocol": "Tcp",
            "sourcePortRange": "*",
            "destinationPortRange": "1234",
            "sourceAddressPrefix": "VirtualNetwork",
            "destinationAddressPrefix": "127.0.0.1",
            "access": "Allow",
            "priority": 1234,
            "direction": "Outbound"
          }
        }
      ],
      "type": "array",
      "metadata": {
        "description": "Custom NSG rules that would be added in addition to the required Databricks rules."
      }
    }
  },
  "variables": {
    "nsgSecurityRules": "[union(parameters('nsgDatabricksSecurityRules'), parameters('nsgCustomSecurityRules'))]",
    "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
  },
  "resources": [
    {
      "name": "[parameters('nsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-06-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": "[variables('nsgSecurityRules')]"
      }
    },
    {
      "name": "[parameters('vnetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-06-01",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('nsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetCidr')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('publicSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('publicSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              },
              "delegations": [
                {
                  "name": "databricks-del-public",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          },
          {
            "name": "[parameters('privateSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('privateSubnetCidr')]",
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              },
              "delegations": [
                {
                  "name": "databricks-del-private",
                  "properties": {
                    "serviceName": "Microsoft.Databricks/workspaces"
                  }
                }
              ]
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "virtualNetworkId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
    },
    "nsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
    }
  }
}
